syntax = "proto3";

option csharp_namespace = "Mmorpg2d.Auth";

package mmorpg2d.auth;

service Auth {
  rpc Register (C_RegisterRequest) returns (S_RegisterReply);
  rpc Login    (C_LoginRequest)    returns (S_LoginReply);
  rpc CheckEmail     (CheckEmailRequest)        returns (CheckEmailReply);
}

message RegisterRequest {
  string email = 1;   // e-mail 도 OK
  string password = 2;
}

message RegisterReply {
  bool   success = 1;
  string detail  = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  bool   success = 1;
  string detail  = 2;
  string jwt     = 3;
}

message CheckEmailRequest {
  string email = 1;
}

message CheckEmailReply {
  bool   available = 1; // true = 사용 가능, false = 이미 존재
  string detail    = 2; // "Available" / "Email already exists"
}
